Closed
Bug 69766
Opened 24 years ago
Closed 23 years ago
Pop-up advert window cannot be dismissed
Categories
(Core :: XUL, defect)
Tracking
()
RESOLVED
FIXED
mozilla0.9.9
People
(Reporter: gtr, Assigned: danm.moz)
Details
(Keywords: helpwanted, platform-parity)
Attachments
(2 files)
|
200 bytes,
text/html
|
Details | |
|
1.14 KB,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (X11; U; SunOS 5.8 sun4u; en-US; m18) Gecko/20010207
BuildID: 2001020721
On receiving a pop-up advertisment from a site, I found that I had no way to
dismiss it because the pop-up window had no WM menu, and the
ad itself didn't have a go-away button. My window manager - CDE - doesn't have
a way of killing a window unless that window expresses the WM menu.
Reproducible: Didn't try
Actual Results: Window has a title bar with no controls. Window does not allow
resizing.
Expected Results: Window is produced with at least the button to drop down the
WM menu, and that menu has at least a close command.
Comment 1•24 years ago
|
||
Chaning the qa contact on these bugs to me. MPT will be moving to the
owner of this component shortly. I would like to thank him for all his hard
work as he moves roles in mozilla.org...Yada, Yada, Yada...
QA Contact: mpt → zach
Comment 4•24 years ago
|
||
Not sure whether this falls under the same bug, but Ctrl-W fails to close popup
windows, forcing one to resort to Alt-F4. Do the menus have to be there for the
keyboard commands associated with the menu items to work?
Comment 5•24 years ago
|
||
Guy, if possible it would be good if you could give the URL of the site in
question. Until then, I'll assume it's the same sort of window you get when you
perform a search at <http://numberfinder.com/>. pp, --> XP Toolkit/Widgets.
Assignee: mpt → trudelle
Component: User Interface Design → XP Toolkit/Widgets
Keywords: pp
QA Contact: zach → jrgm
Comment 6•24 years ago
|
||
caseyperkins, Ctrl+W should be filed as a separate bug (CC me).
Tested on Windows 2000.
Used Mozilla Build 2001040604.
The bug DID NOT occur in Windows.
The "pop-up" had a close option in the far upper right hand corner.
Comment 9•24 years ago
|
||
Has anyone tried to verify this Bug on Linux? I would expect the same behavior
on linux. I tried to reproduce this Bug by visiting www.numberfinder.com and
running a search. I used the 4/7/01 source on a Solaris 8/ with CDE box. Here's
what I see:
- The window that pops up does not have a WM Menu button.
- Clicking rt. mouse button on title bar results in WM Menus being displayed.
Window can then be closed by selecting the WM close menu item
- Ctrl+W closes the Window
- Alt+F4 also closes the Window
I'm ccing Rich Burridge since he is the Netscape 6 for Solaris Team Lead. I'll
let him decide whom to assign the Bug to.
_Ashu
| Reporter | ||
Comment 10•24 years ago
|
||
Belatedly, I confirm that yes, the pop-ups from numberfinder.com *looks* the
kind I was on about in the original report.
I also confirm that I can get the WM menu for the numberfinder windows by
right-clicking on the title bar, as per Ashu's note, so this may be a non-bug.
The thing is, I didn't know that right-clicking a title bar should raise a menu;
it's not exactly intuitive. So you may have quite a few users stuck like this.
Comment 11•24 years ago
|
||
I agree that the popup windows can be dismissed on Solaris with Alt-F4,
but how many users know that? It's something we've added to our trouble
shooting guide, but a nicer fix would be if there was an easier more
intuitive way of dismissing the window. Note that this will also depend
upon the window manager being used. Some window managers might provide
such a facility.
Is this a bug? Perhaps not. It's certainly an RFE but I don't think
Bugzilla knows the difference. I don't know who this should be assigned
to if we are just looking for a Solaris specific fix. In the grand scheme
of things this is minor, and the Solaris core team have higher priorities
so nobody is likely to get to it for quite a while. If we are looking for
some change for the Linux world, then I suggest reassigning it to the
module owner for XP Toolkits/Widgets.
Comment 12•24 years ago
|
||
Reassigning as per Rich Burridge's comments. Pls try and verify on linux and
assign to the appropriate person in the XP Toolkit/Widgets group.
Assignee: ashuk → trudelle
Comment 13•24 years ago
|
||
We're going round in circles here. I assigned this to ashuk because it appears
to be unique to Solaris/CDE. If you guys don't care about it, I'll be happy to
close as worksforme.
Comment 14•24 years ago
|
||
Peter, if you feel that nothing needs to be done for the Linux
platform for this "problem", then indeed, please close out as
worksforme or you can put it back to being a Solaris specific
bug. Our small team of Solaris specific engineers here are not
going to look at this for a long time due to other more
important things that we need to do.
Comment 15•24 years ago
|
||
Okay. Since it seems to be a real bug, I think it is better open than closed.
->rich.burridge@Sun.COM, adding helpwanted keyword
Assignee: trudelle → rich.burridge
Keywords: helpwanted
Comment 16•24 years ago
|
||
Reassigning to Ed to do with as he wants.
Assignee: rich.burridge → edburns
Comment 18•24 years ago
|
||
Reassign to myself due to Ed'd request to check it on CDE and other WMs.
Assignee: edburns → avm
Status: ASSIGNED → NEW
Comment 19•24 years ago
|
||
Comment 20•24 years ago
|
||
This is besause resize flag is assiciated with min/max buttons and system menu.
This is handled in nsAppShellService::JustCreateTopWindow method
(mozilla/xpfe/appshell/src/nsAppShellService.cpp):
Initially, all flags are cleared and menu flag is set only if 'resize' attribute
of open() is set.
This is questionnable, if this is a bug or not, so I do not supply any patches.
In fact, patch would be quite trivial, as soon as 'right' behaviour is defined.
Who should define it? I won't :-)
Oh, almost forgot - this is not solaris thing, but *NIX.
But, anyway, this is a question of window manager configuration - usually WM
allows use to open sys menu by keyboard shortcut. After all, just add 'close'
button to your window decorations. :-)
Comment 21•24 years ago
|
||
Denis:
Just a disscution...
Can we add the menu button(on the left top) for the default window?in this file
mozilla/xpfe/appshell/src/nsAppShellService.cpp
Replace this line:
widgetInitData.mBorderStyle = eBorderStyle_none; // assumes none == 0x00
to widgetInitData.mBorderStyle = eBorderStyle_menu;
I tested it on Solaris8 (Mozilla milestone096).
Only the menu button shows in the popup window.
But the Max/Min menuitem is available, this is another issue I think.
Hope this can help...
Comment 22•24 years ago
|
||
I don't want to fix this bug. I'd rather change Platform to All, OS to Other (or
Linux, as far as
for many people Linux is the same as Unix), then Cc some mozilla guys and leave
it up to them :-)
As for replacing eBorderStyle_none to eBorderStyle_menu, I don't think this is
'The Right Thing'.
IMHO, it would better to always allow system menu
Comment 23•24 years ago
|
||
Oops, I meant to say, that the best solution is to implement
eBorderStyle_close, but this is gtk problem, so it's hard :-(
As for eBorderStyle_menu - Pete, does Max/Min menu items work?
They doesn't work for me and I can't resize window by any means,
but I'm not on CDE ;-)
Comment 24•24 years ago
|
||
Denis:
Yes, Max/Min menu item is working on CDE.
I think this is another issue, we should disable Max/Min and Size menu item if
JavaScript set them to "no". Maybe this is gtk things right?Set default
eBorderStyle to "eBorderStyle_menu" maybe not right thing, but it makes UI more
kindly to user. If anyone does not know "Right Click" popup the menu, they will
find it on left top.
Comment 25•24 years ago
|
||
Changing system menu item is not our business at all.
But always having system menu is not much harm (at
least less, than having no close button :-)
Pete, feel free to attach patch and ask for review...
Comment 26•24 years ago
|
||
I have a idea on this bug, can we add a menu item to window if it has
CHROME_TITLEBAR property?
This will not break anyone's code who want to open a no titlebar and no border
window. But, if anyone wants to open a window with titlebar, just add a menu
item on it. (Look at diff file below)
I will upload a patch of trunk source after test it on my workstation.
Index: nsAppShellService.cpp
===================================================================
RCS file: /cvsroot/mozilla/xpfe/appshell/src/nsAppShellService.cpp,v
retrieving revision 1.170
diff -u -r1.170 nsAppShellService.cpp
--- nsAppShellService.cpp 2001/11/10 23:55:36 1.170
+++ nsAppShellService.cpp 2001/12/17 03:17:37
@@ -489,7 +489,7 @@
if (aChromeMask & nsIWebBrowserChrome::CHROME_WINDOW_BORDERS)
widgetInitData.mBorderStyle = NS_STATIC_CAST(enum nsBorderStyle,
widgetInitData.mBorderStyle | eBorderStyle_border);
if (aChromeMask & nsIWebBrowserChrome::CHROME_TITLEBAR)
- widgetInitData.mBorderStyle = NS_STATIC_CAST(enum nsBorderStyle,
widgetInitData.mBorderStyle | eBorderStyle_title);
+ widgetInitData.mBorderStyle = NS_STATIC_CAST(enum nsBorderStyle,
widgetInitData.mBorderStyle | eBorderStyle_title | eBorderStyle_menu);
if (aChromeMask & nsIWebBrowserChrome::CHROME_WINDOW_CLOSE)
widgetInitData.mBorderStyle = NS_STATIC_CAST(enum nsBorderStyle,
widgetInitData.mBorderStyle | eBorderStyle_close);
if (aChromeMask & nsIWebBrowserChrome::CHROME_WINDOW_RESIZE) {
Comment 27•24 years ago
|
||
This patch I just tested on Solais 9 with mozilla trunk source.
Can module owner or anybody kindly review my patch and check it in?
If have any problem or suggestion, please feel free to contact me.
Thanks. :-)
Comment 30•24 years ago
|
||
The patch looks okay to me.
Perhaps the answer is for Mozilla to always put a close/menu button on a window,
no matter what the JS says.
Comment 31•24 years ago
|
||
I should note I'm talking about untrusted content here. Trusted content should
be able to what it likes, as should embedders.
Comment 32•24 years ago
|
||
Yes, but I think if some code create a window with titlebar, then on windows and
linux, there is a menu bar. But in CDE there is nothing. So this code is for CDE
only...
Embeded window should not have titlebar.
Comment 33•23 years ago
|
||
This is an annoying problem complaining by quite a lot of Solaris user. It
appears that Pete's fix will not affect other window managers, can it be checked
in please? Thanks, Margaret
Comment 34•23 years ago
|
||
Can not see this bug on trunk build20020331.
Comment 35•23 years ago
|
||
Fixed because bug 77020
| Assignee | ||
Comment 36•23 years ago
|
||
Really? Cool. Kind of surprising. I can't see this because I don't have access
to a Solaris machine, but ... I'm closing this bug on Pete Zha's testimony.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Target Milestone: mozilla1.0.1 → mozilla0.9.9
You need to log in
before you can comment on or make changes to this bug.
Description
•