Bug 69766 - Pop-up advert window cannot be dismissed.  Fix provided by pete.zha@sun.com.  a=jdunn@netscape.com